# MedChat

./: .gitignore  README.md  kg_info.py  load_kg.py  pyproject.toml  query.py  test.ipynb
